--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -6,6 +6,10 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@mui/icons-material": "^6.4.8",
 		"@mui/material": "^6.4.8",
 		"@mui/styles": "^6.4.7",
@@ -23,6 +27,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-google-login": "^5.2.2",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.4.0",
 		"react-scripts": "^5.0.1",
 		"react-toastify": "^11.0.5",
