--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.9",
     "parser": "^0.1.4",
     "validator": "^13.12.0"
