--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -24,10 +24,12 @@
 		"ajv-keywords": "^3.5.2",
 		"axios": "^1.8.4",
 		"jwt-decode": "^4.0.0",
+		"leaflet": "^1.9.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-google-login": "^5.2.2",
 		"react-icons": "^5.5.0",
+		"react-leaflet": "^5.0.0",
 		"react-router-dom": "^7.4.0",
 		"react-scripts": "^5.0.1",
 		"react-toastify": "^11.0.5",
