--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -13,6 +13,7 @@
 		"@mui/icons-material": "^6.4.8",
 		"@mui/material": "^6.4.8",
 		"@mui/styles": "^6.4.7",
+		"@react-google-maps/api": "^2.20.6",
 		"@react-oauth/google": "^0.12.2",
 		"@reduxjs/toolkit": "^2.6.1",
 		"@testing-library/dom": "^10.4.0",
